Prevent horizontal scrolling on mobile. (#5)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,11 +245,5 @@ a.quote:hover { color: var(--font01);}
     {
         margin-left: 0;
         margin-right: 0;
-        &.replies-row
-        {
-            margin-left: -15px;
-            margin-right: -15px;
-        }
-        
     }
 }
