--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,6 +7,15 @@
     &.card-normal.sticky, 
     &.card-overlay.sticky { border-top: var(--cyan) 0.35rem solid; }
 
+    @include media-breakpoint-only(xs) 
+    {
+        .replies-container
+        {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
+
     .replies
     {
         padding: 0 10px;
